# url_shortener

./: Cargo.toml  README.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
frontend/src/: main.scss  main.tsx
frontend/src/components/button/: icon-button.module.scss  icon-button.tsx
frontend/src/components/input/: icon-input.module.scss  icon-input.tsx
frontend/src/routes/error/: error-page.module.scss  error-page.tsx  not-found.module.scss  not-found.tsx
frontend/src/routes/root/: root.module.scss  root.tsx
src/: main.rs  routes.rs
